--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
   },
   "homepage": "https://github.com/xf86cfg/node-typescript-init#readme",
   "devDependencies": {
+    "@types/bluebird": "^3.5.33",
+    "@types/node": "^14.14.37",
+    "@types/node-forge": "^0.9.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "tsc": "^1.20150623.0",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "@devicefarmer/adbkit": "^3.2.0",
+    "bluebird": "^3.7.2"
   }
 }
