--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "noFallthroughCasesInSwitch": true,
       "strictNullChecks": true,
       "suppressImplicitAnyIndexErrors": true,
-      "noImplicitThis": true
+      "noImplicitThis": true,
+      "esModuleInterop": true
     },
     "include": ["./src/**/*"],
     "exclude": ["node_modules"]
