--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "@devicefarmer/adbkit": "^3.2.0",
-    "bluebird": "^3.7.2"
+    "@types/express": "^4.17.11",
+    "bluebird": "^3.7.2",
+    "express": "^4.17.1"
   }
 }
