--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/xf86cfg/node-typescript-init#readme",
   "devDependencies": {
     "@types/bluebird": "^3.5.33",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
     "@types/node-forge": "^0.9.7",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@devicefarmer/adbkit": "^3.2.0",
     "bluebird": "^3.7.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
