--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node build/index.js",
+    "start": "tsc && node build/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
