--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "tsc && node build/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-start": "yarn build && yarn start"
+    "build-start": "yarn build && yarn start",
+    "copy-files": "cp ./src/view"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
     "@types/node-forge": "^0.9.7",
+    "@types/pug": "^2.0.4",
     "@types/uuid": "^8.3.0",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
@@ -37,6 +39,7 @@
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "pug": "^3.0.2",
     "uuid": "^8.3.2"
   }
 }
