--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/xf86cfg/node-typescript-init#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bluebird": "^3.5.33",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
@@ -36,6 +37,7 @@
   },
   "dependencies": {
     "@devicefarmer/adbkit": "^3.2.0",
+    "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
