--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc && node build/src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -t 20000 --reporter spec --exit 'build/**/*.spec.js'",
+    "testonly": "mocha -t 20000 --exit 'build/**/*.spec.js'",
     "build-start": "yarn build && yarn start",
     "copy-files": "cp ./src/view"
   },
@@ -24,8 +25,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bluebird": "^3.5.33",
+    "@types/chai": "^4.2.17",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.37",
     "@types/node-forge": "^0.9.7",
     "@types/pug": "^2.0.4",
@@ -39,8 +42,10 @@
     "@devicefarmer/adbkit": "^3.2.0",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
+    "chai": "^4.3.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mocha": "^8.3.2",
     "pug": "^3.0.2",
     "uuid": "^8.3.2"
   }
