--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build
 # Dependency directories
 node_modules/
 jspm_packages/
+database/androidTvDb.db
 
 # TypeScript v1 declaration files
 typings/
