--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.17.1",
     "mocha": "^8.3.2",
     "pug": "^3.0.2",
+    "simplest.db": "^1.0.1-2",
     "uuid": "^8.3.2"
   }
 }
