--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       "noImplicitThis": true,
       "esModuleInterop": true
     },
-    "include": ["./src/**/*"],
+    "include": ["./src/**/*", "config.ts"],
     "exclude": ["node_modules"]
   }
   
