--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "pug": "^3.0.2",
+    "simplest.db": "^1.0.1-2",
     "uuid": "^8.3.2"
   }
 }
