--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && cp -r src/website/routes/views build/src/website/routes/views",
+    "build": "tsc && cp -r src/website/routes/views build/src/website/routes",
     "start": "tsc && node build/src/index.js",
     "test": "mocha -t 20000 --reporter spec --exit 'build/**/*.spec.js'",
     "testonly": "mocha -t 20000 --exit 'build/**/*.spec.js'",
@@ -26,6 +26,7 @@
     "@types/axios": "^0.14.0",
     "@types/bluebird": "^3.5.33",
     "@types/chai": "^4.2.17",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/mocha": "^8.2.2",
@@ -43,10 +44,14 @@
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "chai": "^4.3.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "simplest.db": "^1.0.1-2",
     "uuid": "^8.3.2"
