--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@devicefarmer/adbkit": "^3.2.0",
     "axios": "^0.21.1",
+    "better-sqlite3": "^7.4.0",
     "bluebird": "^3.7.2",
     "chai": "^4.3.4",
     "cookie-parser": "^1.4.5",
