--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
     "request": "launch",
     "name": "Launch Tests",
     "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-    "args": ["dist/**/*.spec.js", "--colors", "--exit", "-t", "10000"],
+    "args": ["build/**/*.spec.js", "--colors", "--exit", "-t", "10000"],
     "outFiles": ["${workspaceFolder}/build/**/*.js"],
     "internalConsoleOptions": "openOnSessionStart"
 }
