--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.DS_Store
+**/.DS_Store
 # Logs
 logs
 *.log
@@ -7,6 +7,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 *.db
+
 
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
