Emergency service singleton

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-typescript-init",
+  "name": "android-tv-ts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
