--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && cp -r src/website/routes/views build/src/website/routes && cp -r src/website/images build/src/website",
-    "start": "tsc && node build/src/index.js",
+    "build-src": "tsc && cp -r src/website/views build/src/website && cp -r src/website/images build/src/website",
+    "build": "tsc && cp -r src/website/views build/website && cp -r src/website/images build/website",
+    "start-src": "tsc && node build/src/index.js",
+    "start": "tsc && node build/index.js",
     "test": "mocha -t 20000 --reporter spec --exit 'build/**/*.spec.js'",
     "testonly": "mocha -t 20000 --exit 'build/**/*.spec.js'",
     "build-start": "yarn build && yarn start",
