--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,24 @@
 {
-    "compilerOptions": {
-      "module": "CommonJS",
-      "resolveJsonModule": true,
-      "moduleResolution": "node",
-      "noImplicitAny": true,
-      "preserveConstEnums": true,
-      "outDir": "./build/",
-      "inlineSourceMap": true,
-      "target": "es2017",
-      "forceConsistentCasingInFileNames": true,
-      "noImplicitReturns": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "strict": true,
-      "noFallthroughCasesInSwitch": true,
-      "strictNullChecks": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "noImplicitThis": true,
-      "esModuleInterop": true
-    },
-    "include": ["./src/**/*", "config.ts"],
-    "exclude": ["node_modules"]
-  }
-  
+  "compilerOptions": {
+    "module": "CommonJS",
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "preserveConstEnums": true,
+    "outDir": "./build/",
+    "inlineSourceMap": true,
+    "target": "es2017",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "strict": true,
+    "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noImplicitThis": true,
+    "esModuleInterop": true
+  },
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
+}
