--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
-    "resolveJsonModule": true,
+    "resolveJsonModule": false,
     "moduleResolution": "node",
     "noImplicitAny": true,
     "preserveConstEnums": true,
