--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.6",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.37",
     "@types/node-forge": "^0.9.7",
@@ -48,6 +49,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "mocha": "^8.3.2",
     "nedb-promises": "^4.1.5",
