--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc && yarn copy-assets && yarn build-sass",
     "start": "node build/index.js",
+    "watch": "nodemon",
     "test": "mocha -t 20000 --reporter spec --exit 'build/**/*.spec.js'",
     "testonly": "mocha -t 20000 --exit 'build/**/*.spec.js'",
     "build-start": "yarn build && yarn start",
@@ -36,6 +37,7 @@
     "@types/node-forge": "^0.9.7",
     "@types/pug": "^2.0.4",
     "@types/uuid": "^8.3.0",
+    "nodemon": "^2.0.12",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "tsc": "^1.20150623.0",
@@ -53,7 +55,6 @@
     "express-session": "^1.17.1",
     "mocha": "^8.3.2",
     "nedb-promises": "^4.1.5",
-    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
