--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express-session": "^1.17.1",
     "mocha": "^8.3.2",
     "nedb-promises": "^4.1.5",
+    "node-sass": "^6.0.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
