Dotenv and config with postbuild

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && yarn copy-assets && yarn build-sass",
+    "build": "tsc && yarn copy-assets && yarn build-sass && yarn post-build",
+    "post-build": "node build/post-build.js",
     "start": "node build/index.js",
     "watch": "nodemon",
     "test": "mocha -t 20000 --reporter spec --exit 'build/**/*.spec.js'",
@@ -30,6 +31,7 @@
     "@types/chai": "^4.2.17",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
     "@types/mocha": "^8.2.2",
@@ -37,6 +39,7 @@
     "@types/node-forge": "^0.9.7",
     "@types/pug": "^2.0.4",
     "@types/uuid": "^8.3.0",
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
@@ -50,6 +53,7 @@
     "chai": "^4.3.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
