--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bluebird": "^3.5.33",
+    "@types/bunyan": "^1.8.7",
+    "@types/bunyan-prettystream": "^0.1.32",
     "@types/chai": "^4.2.17",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
@@ -39,6 +41,7 @@
     "@types/node-forge": "^0.9.7",
     "@types/pug": "^2.0.4",
     "@types/uuid": "^8.3.0",
+    "bunyan-prettystream": "^0.1.3",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.2.1",
@@ -50,6 +53,7 @@
     "@devicefarmer/adbkit": "^3.2.0",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
+    "bunyan": "^1.8.15",
     "chai": "^4.3.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
