--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-promise-router": "^4.1.0",
     "express-session": "^1.17.1",
     "mocha": "^8.3.2",
     "nedb-promises": "^4.1.5",
